opam-version: "2.0"
name: "calculon-redis"
version: "0.5"
synopsis: "A redis plugin for Calculon"
authors: ["c-cube"]
maintainer: "c-cube"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" { >= "1.1" }
  "calculon" { = version }
  "calculon-redis-lib" { = version }
  "redis" { >= "0.3" }
  "redis-lwt"
]
tags: [ "irc" "bot" "redis" ]
homepage: "https://github.com/c-cube/calculon"
bug-reports: "https://github.com/c-cube/calculon/issues"
dev-repo: "git+https://github.com/c-cube/calculon.git"
