opam-version: "1.2"
name: "calculon-web"
version: "0.3"
authors: ["Armael" "Enjolras" "c-cube"]
maintainer: "c-cube"
build: [
  ["dune" "build" "-p" name]
]
build-doc: [ "dune" "build" "@doc" "-p" name ]
build-test: [ "dune" "runtest" "-p" name ]
depends: [
  "dune" {build}
  "calculon" { >= "0.3" }
  "re" { >= "1.7.2" }
  "uri"
  "cohttp"
  "cohttp-lwt"
  "cohttp-lwt-unix"
  "atdgen"
  "lambdasoup"
  "sequence"
  "odoc" {doc}
]
tags: [ "irc" "bot" "factoids" ]
homepage: "https://github.com/c-cube/calculon"
bug-reports: "https://github.com/c-cube/calculon/issues"
dev-repo: "https://github.com/c-cube/calculon.git"
available: [ocaml-version >= "4.02.0"]

