opam-version: "2.0"
name: "calculon-web"
version: "0.4"
synopsis: "A collection of web plugins for Calculon"
authors: ["Armael" "Enjolras" "c-cube"]
maintainer: "c-cube"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  [ "dune" "build" "@doc" "-p" name ] {with-doc}
  [ "dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" {build}
  "calculon" { >= "0.4" }
  "re" { >= "1.7.2" }
  "uri"
  "cohttp"
  "cohttp-lwt"
  "cohttp-lwt-unix"
  "atdgen"
  "lambdasoup"
  "sequence"
  "odoc" {with-doc}
  "ocaml" { >= "4.03.0" }
]
tags: [ "irc" "bot" "factoids" ]
homepage: "https://github.com/c-cube/calculon"
bug-reports: "https://github.com/c-cube/calculon/issues"
dev-repo: "git+https://github.com/c-cube/calculon.git"
