opam-version: "1.2"
name: "calculon"
version: "0.3"
authors: ["Armael" "Enjolras" "c-cube"]
maintainer: "c-cube"
build: [
  ["dune" "build" "-p" name]
]
build-doc: [ "dune" "build" "@doc" "-p" name]
build-test: [ "dune" "runtest" "-p" name]
depends: [
  "dune" {build}
  "base-bytes"
  "base-unix"
  "result"
  "lwt"
  "irc-client" { >= "0.6.0" }
  "irc-client-lwt"
  "irc-client-tls"
  "tls"
  "yojson"
  "containers" { >= "1.0" }
  "ISO8601"
  "stringext"
  "re" { >= "1.7.2" }
  "odoc" {doc}
]
tags: [ "irc" "bot" "factoids" ]
homepage: "https://github.com/c-cube/calculon"
bug-reports: "https://github.com/c-cube/calculon/issues"
dev-repo: "https://github.com/c-cube/calculon.git"
available: [ocaml-version >= "4.02.0"]

