opam-version: "2.0"
name: "calculon"
version: "0.7"
license: "MIT"
synopsis: "Library for writing IRC bots in OCaml and a collection of plugins"
authors: ["Armael" "Enjolras" "c-cube"]
maintainer: "c-cube"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" { >= "1.1" }
  "base-unix"
  "lwt"
  "irc-client" { >= "0.7.0"}
  "irc-client-lwt"
  "irc-client-lwt-ssl"
  "sqlite3"
  "logs" {>= "0.5.0"}
  "yojson" { >= "1.7" }
  "containers" { >= "3.0" & < "4.0" }
  "ptime"
  "stringext"
  "re" { >= "1.7.2" & < "2.0" }
  "odoc" {with-doc}
  "ocaml" { >= "4.08.0" }
]
depopts: [
  "iter"
]
tags: [ "irc" "bot" "factoids" ]
homepage: "https://github.com/c-cube/calculon"
bug-reports: "https://github.com/c-cube/calculon/issues"
dev-repo: "git+https://github.com/c-cube/calculon.git"
